# edu-agent

./: .env.example  .gitignore  LICENSE  README.cs.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  ruff.toml
assets/: EduAgent_research.xlsx  README.txt
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  BEST_PRACTICES.md  FEATURES.md  README.md  (+3 more)
src/edu-api/: Dockerfile  auth.py  config.py  dependencies.py  exception_handlers.py  main.py  pyproject.toml  test_queue.py
src/edu-api/routers/: __init__.py  auth.py  chats.py  documents.py  flashcard_groups.py  mind_maps.py  notes.py  practice_records.py  projects.py  quizzes.py  schemas.py  study_plans.py  study_sessions.py  usage.py  users.py
src/edu-api/services/: queue.py
src/edu-shared/: pyproject.toml
src/edu-shared/src/edu_shared/: core.py  exceptions.py  keyvault.py
src/edu-shared/src/edu_shared/agents/: base.py  context.py  factory.py  flashcard_agent.py  mind_map_agent.py  note_agent.py  quiz_agent.py
src/edu-shared/src/edu_shared/agents/prompts/: flashcard_prompt.jinja2  mind_map_prompt.jinja2  note_prompt.jinja2  quiz_prompt.jinja2
src/edu-shared/src/edu_shared/agents/tools/: flashcard.py  mind_map.py  note.py  quiz.py  rag.py
src/edu-shared/src/edu_shared/db/: models.py  session.py
src/edu-shared/src/edu_shared/db/alembic/: env.py
src/edu-shared/src/edu_shared/db/alembic/versions/: 1321101a510b_add_study_attempts.py  20788f8503dc_remove_soft_delete.py  2935b82f772a_sync_users_with_supabase_auth.py  339047046f57_remove_spaced_repetition.py  359f1c1a7f5c_add_ondelete_cascade.py  3b970a6bde74_add_summary_remove_pagination.py  3d089122a173_drop_study_plan.py  43ddc48af9ac_add_language_code_to_project.py  449119d9b2ee_add_azure_entra_fields_to_user.py  67db11805af5_add_flashcard_spaced_repetition.py  6ca712704290_add_name_to_user.py  7ec31a028457_initialize_models.py  82e63c12156c_add_rag_support_fields.py  8559d6bab48f_add_study_plans.py  85886f577779_rename_study_attempt_to_practice_record.py  8cea1d8eaa62_add_supabase_user_id_to_user.py  926e2ba2adbb_add_user_usage_tracking.py  9d34df6b7fd5_update_embedding_vector_dimensions_to_.py  ac6bb078c667_add_notes_table.py  b8c07ad41090_add_page_number_to_document_segments.py  c5ead109f6b6_add_position_to_quiz_questions.py  d81d48f055af_add_mind_maps_table.py  eb4a0e7c9374_add_position_to_flashcards.py  f265c5459882_add_study_sessions.py
src/edu-shared/src/edu_shared/schemas/: chats.py  documents.py  flashcards.py  mind_maps.py  notes.py  practice.py  projects.py  queue.py  quizzes.py  search.py  study_sessions.py  usage.py  users.py
src/edu-shared/src/edu_shared/services/: __init__.py  chats.py  content_understanding.py  document_processing.py  document_upload.py  documents.py  flashcard_groups.py  mind_maps.py  notes.py  practice.py  projects.py  queue.py  quizzes.py  search.py  study_sessions.py  usage.py  users.py
src/edu-worker/: .dockerignore  Dockerfile  config.py  content_understanding.py  main.py  pyproject.toml
src/edu-worker/processors/: __init__.py  base.py  chat_title.py  document.py  flashcard.py  llm.py  mind_map.py  note.py  quiz.py  registry.py
src/shared/ai/: README.md  pyproject.toml
src/shared/ai/src/edu_ai/: __init__.py  content_understanding.py
src/shared/ai/src/edu_ai/agents/: __init__.py  base.py  context.py  factory.py  flashcard_agent.py  mind_map_agent.py  note_agent.py  quiz_agent.py  topic_graph_agent.py  utils.py
src/shared/ai/src/edu_ai/agents/prompts/: flashcard_prompt.jinja2  system_prompt.jinja2
src/shared/ai/src/edu_ai/agents/tools/: flashcard.py  mind_map.py  note.py  quiz.py  rag.py
src/shared/ai/src/edu_ai/chatbot/: context.py  factory.py
src/shared/ai/src/edu_ai/prompts/: note_prompt.jinja2  prompts_utils.py  quiz_prompt.jinja2  study_plan.jinja2  topic_graph_prompt.jinja2
src/shared/ai/src/edu_ai/tools/: flashcard.py  mind_map.py  note.py  quiz.py  rag.py
src/shared/core/: README.md  pyproject.toml
src/shared/core/src/edu_core/: __init__.py  exceptions.py  keyvault.py
src/shared/core/src/edu_core/db/: models.py  session.py  supabase_sync_auth_users.sql
src/shared/core/src/edu_core/db/alembic/: env.py
src/shared/core/src/edu_core/db/alembic/versions/: 0e495cf580db_remove_azure_search_metadata.py  1cdb205d42a9_add_flashcard_groups_quizzes_and_quiz_.py  8559d6bab48f_add_study_plans.py  926e2ba2adbb_add_user_usage_tracking.py  d81d48f055af_add_mind_maps_table.py  fe3d026f4c75_add_flashcard_progress.py
src/shared/core/src/edu_core/schemas/: chats.py  documents.py  flashcards.py  mind_maps.py  notes.py  practice.py  projects.py  quizzes.py  search.py  study_plan_generation.py  study_plans.py  study_sessions.py
src/shared/core/src/edu_core/services/: __init__.py  chats.py  document_upload.py  documents.py  flashcard_groups.py  mind_maps.py  notes.py  practice.py  projects.py  queue.py  quizzes.py  search.py  study_plans.py  study_sessions.py  usage.py  users.py
src/shared/db/: README.md  pyproject.toml
src/shared/db/src/edu_db/: models.py
src/shared/db/src/edu_db/alembic/versions/: 12d284c3be7b_change_study_plan_content_to_json.py  16f073c19d8a_add_flashcard_group_study_session_id.py  3b970a6bde74_add_summary_remove_pagination.py  6ce0062076e9_refactor_chat_tables.py  82e63c12156c_add_rag_support_fields.py  a7213490698e_add_pgvector_extension.py  add_source_document_fields_to_chat_message_parts.py  c5ead109f6b6_add_position_to_quiz_questions.py  c6293d1898fc_add_mindmap_usage.py  ca92bac4538c_add_study_plan.py  eb4a0e7c9374_add_position_to_flashcards.py
(+568 files in other folders)
