[project]
name = "edu-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "src/edu-api",
    "src/edu-worker",
    "src/edu-shared",
    "src/shared/db",
    "src/shared/core",
    "src/shared/ai",
    "src/shared/queue",
    "deploy/azure",
]
