[project]
name = "edu-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-storage-queue>=12.14.1",
    "edu-shared",
    "fastapi>=0.124.4",
    "langchain-openai>=1.1.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "scalar-fastapi>=1.0.0",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
edu-shared = { workspace = true }
