[project]
name = "edu-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "azure-storage-blob>=12.27.1",
    "azure-storage-queue>=12.14.1",
    "edu-shared",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.2",
    "pydantic-settings>=2.12.0",
]

[tool.uv.sources]
edu-shared = { workspace = true }
