[project]
name = "edu-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edu-core",
    "edu-ai",
    "edu-queue",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.2",
    "pydantic-settings>=2.12.0",
]

[tool.uv.sources]
edu-core = { workspace = true }
edu-queue = { workspace = true }
edu-ai = { workspace = true }
