[project]
name = "edu-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Amare", email = "amarerichard@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "edu-db",
    "edu-core",
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "jinja2>=3.1.6",
    "langchain-agent>=0.1.1",
    "langchain-core>=1.1.3",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "pgvector>=0.2.5,<0.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
edu-db = { workspace = true }
edu-core = { workspace = true }
