[project]
name = "edu-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Amare", email = "amarerichard@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "edu-db",
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "azure-storage-blob>=12.27.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
edu-db = { workspace = true }
